# rag-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: config.py  main.py  services.py
frontend/: api.py  app.py
